--- a/.github/workflows/shiftleft-analysis.yml
+++ b/.github/workflows/shiftleft-analysis.yml
@@ -32,7 +32,7 @@ jobs:
         SCAN_AUTO_BUILD: true
       with:
         output: reports
-        # Scan auto-detects the languages in your project. To override uncomment the below variable and set the type
+        # Scan auto-detects the languages in project. To override uncomment the below variable and set the type
         # type: credscan,java
         # type: python
 
